# hovercode

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  STYLE_GUIDE.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  dependabot.yml  unified-deployment.yml
docs/: index.md  requirements.txt
docs/api/: hovercodes.md  index.md
docs/getting-started/: authentication.md  index.md  installation.md  quickstart.md
docs/guides/: examples.md  index.md  troubleshooting.md
docs/includes/: abbreviations.md
docs/reference/: changelog.md  data-types.md  exceptions.md  index.md
examples/: create_hovercode.py  list_workspace_hovercodes.py  update_hovercode.py  verify_webhook_signature.py
hovercode/: __init__.py  base_client.py  client.py  enums.py  exceptions.py  hovercodes.py  models.py  types.py  webhooks.py
tests/: __init__.py  test_base_client.py  test_client.py  test_hovercodes.py  test_models.py  test_package_init.py  test_webhooks.py
