[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hovercode"
version = "0.1.1"
description = "Typed Python client for the Hovercode QR code API."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hovercode" }]
keywords = ["hovercode", "qr", "qrcode", "api", "client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.32.4",
  "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.10",
  "black>=24.10.0",
  "build>=1.2.2",
  "flake8>=7.1.1",
  "isort>=5.13.2",
  "mypy>=1.13.0",
  "pip-audit>=2.7.3",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "responses>=0.25.3",
  "types-requests>=2.32.0",
  "twine>=5.1.1",
]
dotenv = ["python-dotenv>=1.0.1"]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.39",
  "mkdocstrings[python]>=0.26.1",
  "mkdocs-minify-plugin>=0.8.0",
  "pymdown-extensions>=10.11.2",
]

[project.urls]
Homepage = "https://theperrygroup.github.io/hovercode/"
Source = "https://github.com/theperrygroup/hovercode"
Issues = "https://github.com/theperrygroup/hovercode/issues"
Changelog = "https://github.com/theperrygroup/hovercode/releases"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hovercode*"]

[tool.setuptools.package-data]
hovercode = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true
warn_no_return = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["dotenv", "dotenv.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["hovercode"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100

